fix align-self for modal button

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -744,7 +744,6 @@ img {
   .modal__policy {
     margin-bottom: 2.768rem; }
   .modal__button {
-    align-self: flex-end;
     padding: 1.357rem 1.5rem 1.357rem 1.5rem;
     border-radius: 0; }
 
